# chromium_build

./: .gitignore  BUILD.gn  OWNERS  build_config.h  check_gn_headers_whitelist.txt  dotfile_settings.gni  gn_helpers.py  gn_helpers_unittest.py  install-build-deps.sh  mac_toolchain.py  nocompile.gni  partitioned_shared_library.gni  print_clang_major_version.py  protoc_java.py  vs_toolchain.py  whitespace_file.txt
android/: BUILD.gn  PRESUBMIT.py  apk_operations.py  generate_jacoco_report.py  generate_jacoco_report_test.py  list_java_targets.py  resource_sizes.py  test_runner.py  test_runner.pydeps
android/buildhooks/: BUILD.gn
android/bytecode/: BUILD.gn
android/bytecode/java/org/chromium/bytecode/: ByteCodeProcessor.java  ClassPathValidator.java
android/docs/: java_toolchain.md
android/gradle/: generate_gradle.py  root.jinja
android/gyp/: aar.py  apkbuilder.py  bundletool.py  bytecode_processor.py  compile_java.py  compile_resources.py  compile_resources.pydeps  create_bundle_wrapper_script.pydeps  create_r_java.py  create_size_info_files.py  dex.py  dex_jdk_libs.py  dist_aar.py  finalize_apk.py  java_cpp_enum.py  javac.py  jetify_jar.py  lint.py  main_dex_list.py  merge_manifest.py  prepare_resources.py  prepare_resources.pydeps  proguard.py  turbine.py  write_build_config.py  write_native_libraries_java.py
android/gyp/test/: BUILD.gn
android/gyp/util/: build_utils.py  diff_utils.py  manifest_utils.py  manifest_utils_test.py  md5_check.py  parallel.py  resource_utils.py
android/lint/: OWNERS  baseline.xml  suppressions.xml
android/pylib/constants/: __init__.py  host_paths.py
android/pylib/device/commands/: BUILD.gn
android/pylib/device/commands/java/src/org/chromium/android/commands/unzip/: Unzip.java
android/pylib/gtest/: gtest_test_instance.py  gtest_test_instance_test.py
android/pylib/gtest/filter/: content_browsertests_disabled
android/pylib/instrumentation/: instrumentation_parser.py  instrumentation_test_instance.py  instrumentation_test_instance_test.py
android/pylib/local/device/: local_device_gtest_run.py  local_device_instrumentation_test_run.py  local_device_instrumentation_test_run_test.py
android/pylib/local/emulator/: avd.py  ini.py  local_emulator_environment.py
android/pylib/local/emulator/proto/: avd.proto  avd_pb2.py
android/pylib/utils/: chrome_proxy_utils.py  chrome_proxy_utils_test.py  device_dependencies.py  gold_utils.py  gold_utils_test.py
android/stacktrace/: BUILD.gn
apple/: xcrun.py
args/: headless.gn
args/chromeos/: README.md
chromeos/: test_runner.py
cipd/: cipd.gni  prepare_cipd_package_definition.py
config/: BUILD.gn  BUILDCONFIG.gn  locales.gni  python.gni  ui.gni
config/android/: config.gni  internal_rules.gni  rules.gni
config/android/test/proto/: BUILD.gn
config/c++/: BUILD.gn  c++.gni
config/chromeos/: rules.gni
config/compiler/: BUILD.gn  compiler.gni
config/compiler/pgo/: BUILD.gn  pgo.gni
config/fuchsia/: BUILD.gn  fidl_library.gni  generate_runner_scripts.gni  gfx_tests.cmx  package.gni  prepare_package_inputs.py  testing_sandbox_policy  tests-with-exec.cmx  tests.cmx
config/ios/: BUILD.gn  find_signing_identity.py  ios_sdk.gni  ios_test_runner_wrapper.gni  rules.gni
config/linux/: BUILD.gn
config/linux/atk/: BUILD.gn
config/linux/gtk/: BUILD.gn
config/linux/libdrm/: BUILD.gn
config/mac/: mac_sdk.gni  sdk_info.py
config/profiling/: profiling.gni
config/sanitizers/: BUILD.gn  sanitizers.gni
config/win/: BUILD.gn  manifest.gni
fuchsia/: aemu_target.py  common_args.py  device_target.py  emu_target.py  linux.sdk.sha1  mac.sdk.sha1  qemu_target.py  run_package.py  runner_exceptions.py  runner_logs.py  target.py  test_runner.py  update_sdk.py
fuchsia/fidlgen_js/: BUILD.gn
ios/: intent_definition.gni
lacros/: test_runner.py  test_runner_test.py
linux/: sysroot_ld_path.sh
linux/sysroot_scripts/: sysroot-creator-sid.sh  sysroot-creator.sh  sysroots.json
linux/sysroot_scripts/generated_package_lists/: sid.amd64  sid.arm  sid.arm64  sid.armel  sid.i386  sid.mips64el  sid.mipsel
linux/unbundle/: icu.gn  zlib.gn
mac/: find_sdk.py  should_use_hermetic_xcode.py
sanitizers/: sanitizer_options.cc
skia_gold_common/: skia_gold_session.py  skia_gold_session_unittest.py
toolchain/: clang_code_coverage_wrapper.py  concurrent_links.gni  cros_toolchain.gni  gcc_solink_wrapper.py  gcc_toolchain.gni  get_concurrent_links.py  goma.gni  toolchain.gni
toolchain/android/: BUILD.gn
toolchain/cros/: BUILD.gn
toolchain/mac/: BUILD.gn
toolchain/win/: BUILD.gn  midl.py  setup_toolchain.py  toolchain.gni
util/: LASTCHANGE.committime  android_chrome_version.py  version.gni
win/: BUILD.gn
