# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")

java_binary("java_deobfuscate") {
  main_class = "org.chromium.build.FlushingReTrace"
  sources = [ "java/org/chromium/build/FlushingReTrace.java" ]
  deps = [ "//third_party/proguard:retrace_java" ]

  # Use the checked-in copy of the wrapper script & .jar rather than the built
  # one to simplify usage of the tool.
  data = [
    "java_deobfuscate.py",
    "java_deobfuscate.jar",
  ]
}
