# Copyright 2017 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

assert(is_fuchsia)
assert(!is_posix)

config("compiler") {
  configs = [ "//third_party/fuchsia-sdk/sdk/build/config:compiler" ]

  # TODO(https://crbug.com/706592): The stack defaults to 256k on Fuchsia (see
  # https://fuchsia.googlesource.com/zircon/+/master/system/private/zircon/stack.h#9),
  # but on other platforms it's much higher, so a variety of code assumes more
  # will be available. Raise to 8M which matches e.g. macOS.
  ldflags = [ "-Wl,-z,stack-size=0x800000" ]

  # TODO(https://crbug.com/821951): Clang enables SafeStack by default when
  # targeting Fuchsia, but it breaks some tests, notably in V8.
  cflags = [ "-fno-sanitize=safe-stack" ]
}

# Settings for executables.
config("executable_config") {
  ldflags = [ "-pie" ]
}
