# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/coverage/coverage.gni")

declare_args() {
  use_clang_profiling = use_clang_coverage
}

assert(!use_clang_profiling || is_clang,
       "Clang Source-based profiling requires clang.")
